--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> You explaining to me how this thing works
+          <strong>Valentine Date:</strong> diner at 9pm 
         </p>
       </div>
     </div>
